...
                                                            </userDefinedRuntimeAttribute>
                                                        </userDefinedRuntimeAttributes>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wgu-Jt-fQB" customClass="RoundButton" customModule="Cafe__Manager" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="424.5" width="335" height="64.5"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                        <state key="normal" title="FORGOT PASSWORD">
                                                            <color key="titleColor" red="0.10041090229999999" green="0.57296534799999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="15"/>
                                                            </userDefinedRuntimeAttribute>
...
                                                            <segue destination="dtH-Cz-haz" kind="show" id="8Oy-6g-GeR"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ccb-n3-g8u" customClass="RoundButton" customModule="Cafe__Manager" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="509" width="335" height="65"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                        <state key="normal" title="SIGN UP">
                                                            <color key="titleColor" red="0.10041090229999999" green="0.57296534799999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="15"/>
                                                            </userDefinedRuntimeAttribute>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhD-HR-uF0" customClass="RoundButton" customModule="Cafe__Manager" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="457.5" width="335" height="36.5"/>
                                                        <color key="backgroundColor" red="0.047227970229999999" green="0.35217613269999998" blue="0.65868892769999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                        <state key="normal" title="REGISTER">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="15"/>
                                                            </userDefinedRuntimeAttribute>
...
                                                <rect key="frame" x="57" y="164.5" width="261" height="43"/>
                                                <color key="backgroundColor" red="0.052858855429999997" green="0.4083006139" blue="0.77197017769999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="43" id="K1b-9s-pZd"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                <state key="normal" title="RESET PASSWORD">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <real key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
...
